foto, video e musica

--- a/MinhaRotia/minha-rotina.html
+++ b/MinhaRotia/minha-rotina.html
@@ -6,6 +6,13 @@
     <title>Mateus Falcão</title>
 </head>
 <body>
-    <h1>Eu acordo por volta dass 4:30 da manhã e vou já tomar um banho, logo em seguida eu arrumo a minha bolsa e faço os meu lanches para levar para faculdade, por volta das 5:30,</h1>
+    <h1>Mateus Falcão</h1>
+    <img src="imagens/perfil.png" width="150" height="150" alt="Perfil Mateus Falcão">
+    <audio autoplay loop src="SÓ FÉ - EU LAVANTEI DA CAMA E CAMA.mp3" controls>
+    </audio>
+    <p>Eu acordo por volta das 4:30 da manhã e já vou tomar um banho. Logo em seguida, arrumo minha bolsa e preparo meus lanches e o café da manhã. Por volta das 5:30, começo a tomar o meu café, e lá pelas 6:10 saio de casa para pegar o ônibus e ir para a faculdade. Chego na faculdade por volta das 7:40 ou 8:00 e tenho aula até as 12:50. Depois da faculdade, vou para a academia e chego em casa por volta das 15h para almoçar. Entre as 16h e 18h, dou uma revisada nos assuntos do dia, e às 19h janto para poder deitar na cama por volta das 20:30, começando o meu dia novamente.</p>
+    <video width="640" height="360" controls>
+        <source src="movie.mp4" type="video/mp4">
+    </video>
 </body>
 </html>
