--- a/MinhaRotia/minha-rotina.html
+++ b/MinhaRotia/minha-rotina.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mateus Falcão</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Mateus Falcão</h1>
+    <a href="contato.html">Contato</a>
     <img src="imagens/perfil.png" width="150" height="150" alt="Perfil Mateus Falcão">
     <audio autoplay loop src="SÓ FÉ - EU LAVANTEI DA CAMA E CAMA.mp3" controls>
     </audio>
