--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>Mateus Falcão</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
-        <a href="Exercicios">Exercicios</a>
-        <a href="MinhaRotina/contato.html">Contato</a>
-        <a href="login">login</a>
+        <a href="#" class="logo">portfólio</a>
+        <ul>
+            <li><a href="Exercicios">Exercicios</a></li>
+            <li><a href="MinhaRotina/contato.html">Contato</a></li>
+            <li><a href="login">login</a></li>
+        </ul>
     </nav>
 
     <section class="home">
@@ -20,9 +26,9 @@
             <h2>Desenvolverdor FrontEnd</h2>
             <p>"Olá! esse é o meu portfólio, criado para mostrar um pouco mais sobre mim e o inicio dos meus projetos na parte de frontend"</p>
             <div class="midias">
-                <a href="#"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
-                <a href="#"><i class='bx bxl-facebook-circle' ></i></a>
+                <a href="https://github.com/Mateus-FCL"><i class='bx bxl-github'></i></a>
+                <a href="https://www.instagram.com/_mateusfalcao_/"><i class='bx bxl-instagram-alt' ></i></a>
+                <a href="https://www.facebook.com/?locale=pt_BR"><i class='bx bxl-facebook-circle' ></i></a>
             </div>
         </div>
         <div class="img">
