pagina de cadastro

--- a/MinhaRotina/minha-rotina.html
+++ b/MinhaRotina/minha-rotina.html
@@ -8,13 +8,13 @@
 <body>
     <h1>Mateus Falcão</h1>
     <a href="contato.html">Contato</a>
-    <img src="imagens/perfil.png" width="150" height="150" alt="Perfil Mateus Falcão">
-    <audio autoplay loop src="SÓ FÉ - EU LAVANTEI DA CAMA E CAMA.mp3" controls>
+    <img src="../imagens/perfil.png" width="150" height="150" alt="Perfil Mateus Falcão">
+    <audio autoplay loop src="../SÓ FÉ - EU LAVANTEI DA CAMA E CAMA.mp3" controls>
     </audio>
     <p><b>Eu acordo por volta das 4:30 da manhã</b> e já vou tomar um banho. Logo em seguida, arrumo minha bolsa e preparo meus lanches e o café da manhã. <b>Por volta das 5:30, começo a tomar o meu café, e lá pelas 6:10 saio de casa para pegar o ônibus e ir para a faculdade.</b> Chego na faculdade por volta das 7:40 ou 8:00 e tenho aula até as 12:50. <b>Depois da faculdade, vou para a academia e chego em casa por volta das 15h para almoçar.</b> Entre as 16h e 18h, dou uma revisada nos assuntos do dia, e às 19h janto para poder <b>deitar na cama por volta das 20:30</b>, começando o meu dia novamente.</p>
     <p><i>"Sem a música, a vida seria um erro."</i> -Friedrich Nietzsche</p>
     <video width="640" height="360" controls>
-        <source src="movie.mp4" type="video/mp4">
+        <source src="../movie.mp4" type="video/mp4">
     </video>
 </body>
 </html>
