--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <nav class="navbar">
         <a href="#" class="logo">portfólio</a>
         <ul>
-            <li><a href="Exercicios">Exercicios</a></li>
+            <li><a href="MinhaRotina/minha-rotina.html">Minha Rotina</a></li>
             <li><a href="MinhaRotina/contato.html">Contato</a></li>
-            <li><a href="login">login</a></li>
+            <li><a href="login/cadastro.html">Cadastro</a></li>
         </ul>
     </nav>
 
