--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="MinhaRotina/minha-rotina.html">Minha Rotina</a></li>
             <li><a href="MinhaRotina/contato.html">Contato</a></li>
-            <li><a href="login/cadastro.html">Cadastro</a></li>
+            <li><a href="Cadastro/cadastro.html">Cadastro</a></li>
         </ul>
     </nav>
 
