--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <nav class="navbar">
         <a href="#" class="logo">portfólio</a>
         <ul>
-            <li><a href="MinhaRotina/minha-rotina.html">Minha Rotina</a></li>
-            <li><a href="Borda/borda.html">exercicio de borda</a></li>
+            <li><a href="exercicios.html">Exercicios</a></li>
             <li><a href="MinhaRotina/contato.html">Contato</a></li>
             <li><a href="Cadastro/cadastro.html">Cadastro</a></li>
         </ul>
