--- a/exercicios.html
+++ b/exercicios.html
@@ -17,10 +17,12 @@
             <li><a href="Cadastro/cadastro.html">Cadastro</a></li>
         </ul>
     </nav>
-
     <div class="container">
         <div class="titulo">
             <h1>Lista de exercicios</h1>
+        </div>
+        <div class="cards">
+
         </div>
     </div>
 </body>
