--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
     <nav class="navbar">
         <a href="#" class="logo">portfólio</a>
         <ul>
-            <li><a href="exercicios.html">Exercicios</a></li>
+            <li><a href="#">Exercicios &#x25BE;</a>
+                <ul class="drop">
+                    <li><a href="MinhaRotina/minha-rotinaNoCSS.html">Exercicio 1</a></li>
+                    <li><a href="Cadastro/cadastro.html">Exercicio 2</a></li>
+                    <li><a href="MinhaRotina/minha-rotina.html">Exercicio 3</a></li>
+                    <li><a href="Borda/borda.html">Exercicio 4</a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </li>
             <li><a href="MinhaRotina/contato.html">Contato</a></li>
             <li><a href="Cadastro/cadastro.html">Cadastro</a></li>
         </ul>
