--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="Cadastro/cadastro.html">Exercicio 2</a></li>
                     <li><a href="MinhaRotina/minha-rotina.html">Exercicio 3</a></li>
                     <li><a href="Borda/borda.html">Exercicio 4</a></li>
-                    <li><a href=""></a></li>
+                    <li><a href="JogoSenha/jogoSenha.html">Exercicio 5</a></li>
                 </ul>
             </li>
             <li><a href="MinhaRotina/contato.html">Contato</a></li>
